Fix wrapping problem with top menu using text. (#5)
This now uses a drop-down menu to save horizontal space.

--- a/org_chart_maker/static/navbar.css
+++ b/org_chart_maker/static/navbar.css
@@ -3,7 +3,7 @@ body {
 }
 
 .navbar {
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: #333;
   position: fixed;
   top: 0;
@@ -11,8 +11,8 @@ body {
   z-index: 2;
 }
 
-.navbar a {
-  float: left;
+a.navbar-right {
+  float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
